--- a/qr_app/templates/delete.html
+++ b/qr_app/templates/delete.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2>Eliminar datos permanentemente</h2>
+            <h2>Eliminar cuenta</h2>
             <p>La opcion de borrar los datos es solo en caso de emergencia como: <br>
                 - Perder el codigo QR <br>
                 - Mal uso del codigo QR <br>
