--- a/qr_app/templates/form.html
+++ b/qr_app/templates/form.html
@@ -11,6 +11,7 @@
       <!--Titulo-->
       <h2 class="text-white bg-primary text-center rounded-top p-3">Editar mis datos</h2>
 
+      
       <!--Alerta-->
       <div class="alert alert-dismissible alert-warning mx-3">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
@@ -24,7 +25,7 @@
         <div class="form-group mx-3">
           {{form|crispy}}
           <div class="d-grid gap-2">
-            <button class="btn btn-primary my-3">Guardar</button>
+            <button class="btn btn-primary my-3">Editar datos</button>
           </div>
         </div>
       </form>
