--- a/qr_app/templates/index.html
+++ b/qr_app/templates/index.html
@@ -23,7 +23,7 @@
         <div class="row justify-content-center mb-4">
             <div class="col-lg-4 col-sm-12 text-center">
                 <form action="{% url 'info' %}">
-                    <button class="btn btn-light btn-lg" type="summit" href="{% url 'info' %}">¿Cómo funciona?</button>
+                    <!--<button class="btn btn-light btn-lg" type="summit" href="{% url 'info' %}">¿Cómo funciona?</button>-->
 
                 </form>
             </div>
